# OOP_MAI_LAB6

./: .gitignore  CMakeLists.txt  README.md
.devcontainer/: devcontainer.json
include/: IFightVisitor.hpp  INpcFactory.hpp  dragon.hpp  elf.hpp  fight_visitor.hpp  knight.hpp  npc.hpp  npc_factory.hpp
src/: ConsoleLogger.cpp  fight_visitor.cpp  main.cpp  npc.cpp  npc_factory.cpp
tests/: factory_test.cpp  npc_test.cpp  test_main.cpp
